--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "webpack --config webpack.config.js --mode=production",
     "build:dev": "webpack --config webpack.config.js --mode=development --display-error-details",
     "watch": "webpack --config webpack.config.js --mode=development --watch",
-    "start": "node src/server/server.js"
+    "start": "node src/server/server.js",
+    "start:dev": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -29,5 +30,7 @@
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "webpack-dev-server": "^3.1.10"
+  }
 }
