--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   },
   "homepage": "https://github.com/untio11/xdaysRL#readme",
   "dependencies": {
+    "@types/lodash": "^4.14.118",
     "@types/rot-js": "^0.6.4",
     "express": "^4.16.4",
+    "lodash": "^4.17.11",
     "rot-js": "^2.0.0",
     "ts-loader": "^5.3.0",
     "tsc-watch": "^1.0.30",
