--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:dev": "webpack --config webpack.config.js --mode=development --display-error-details",
     "watch": "webpack --config webpack.config.js --mode=development --watch",
     "start": "node src/server/server.js",
-    "start:dev": "webpack-dev-server"
+    "start:dev": "webpack-dev-server",
+    "build:doc": "typedoc --out documentation/ ./src/"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,7 @@
     "ts-loader": "^5.3.0",
     "tsc-watch": "^1.0.30",
     "tslint": "^5.11.0",
+    "typedoc": "^0.13.0",
     "typescript": "^3.1.6",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2"
