--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "watch": "webpack --config webpack.config.js --mode=development --watch",
     "start": "node src/server/server.js",
     "start:dev": "webpack-dev-server",
-    "build:doc": "typedoc --out documentation/ ./src/"
+    "build:doc": "rm -rf ./doc/ && typedoc --out ./doc/ ./src/"
   },
   "repository": {
     "type": "git",
